# tokenizer_icml2026

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  build_ctok_from_corpus.py  demo_build_and_load.sh  demo_train_waf.py  paper_content.tex  pyproject.toml  run_ctok_experiment.py  run_ctok_experiment2.py  run_ctok_experiment2_hydra.py  sample_corpus.txt  setup.sh  test_token.py  tokenization_ctok.py
.github/workflows/: lint.yml  tests.yml  typecheck.yml
artifacts/: README.md
conf/: config.yaml
conf/dataset/: hdfs.yaml  phish_html.yaml  phishing_email.yaml  waf.yaml
configs/: ctok_experiment.yaml  ctok_experiment2.yaml  default.yaml
configs/datasets/: hdfs_v1.yaml  phishing_html.yaml  waf_http.yaml
configs/experiments/: benchmark.yaml  equal_compute.yaml  equal_model.yaml
configs/models/: canine.yaml  distilroberta.yaml  minilm_l6.yaml  ngram_lr.yaml  roberta_base.yaml  roberta_large.yaml
configs/sweeps/: ablations.yaml  rate_distortion.yaml  roberta_matrix.yaml
configs/tokenizers/: boundary_heal.yaml  bpe.yaml  byte.yaml  ctok.yaml  unigram.yaml
ctok_core/: __init__.py  build_ctok.py  build_ctok_from_corpus.py  hygiene.py  pretokenize.py  tokenization_ctok.py  tokenization_ctok_fast.py
ctok_extras/: __init__.py
ctok_extras/benchmarks/: end2end_throughput.py  memory_profile.py
ctok_extras/cli/: __init__.py  bench.py  build.py  encode.py  eval.py  main.py  train.py
ctok_extras/datasets/: __init__.py  config.py  io.py  registry.py
ctok_extras/diagnostics/: __init__.py  granger.py
ctok_extras/experiments/: __init__.py  plotting.py  run.py  sweeps.py  tokenizers.py
ctoken/: __init__.py  cli.py  demo_no_remote_code.py
ctoken/core/: __init__.py  (+1 more)
data/: README.md
design/: 3_problem_definition.tex  4_DST_framework.tex  5_algorithms.tex  6_experiments.tex  7_discussion_and_future_work.tex  appendix.tex  combined_0_7.tex  main.tex  paper.tex  ref.bib
docker/: Dockerfile  compose.yaml
docs/: api.md  datasets.md  experiments.md  index.md  reproducibility.md  theory.md
dst/: __init__.py  cli.py  download_seclists.py  download_warc.py  merge_seclists_corpus.py  tokenizer.py
experiments/: __init__.py  metrics.py  results_protocol.json  run_experiment.py  run_experiments.py
results/: README.md
scripts/: build_tokenizer.py  export_artifacts.py  finetune_roberta.py  prepare_data.py  prepare_http_corpus.py  run_all.sh  run_all_tokenizers.py  run_paper_experiments.py  train_tokenizer.py  train_waf_unigram.py
src/: builder.py  http_tokenizer.py  metrics.py
tests/: conftest.py  test_cit_artifact_runtime.py  test_contract_integrity.py  test_entropy_guardrails.py  test_http_struct_tokens.py  test_hygiene.py  test_prepare_http_corpus.py  test_reproducibility.py
(+129 files in other folders)
