[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctoken"
version = "0.1.0"
description = "Unified CTok training wrapper and tokenizer artifact builder"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyarrow>=12",
  "datasets>=2.18",
  "huggingface_hub>=0.20",
  "transformers>=4.40",
  "tokenizers>=0.15",
  "hydra-core>=1.3",
]

[project.optional-dependencies]
parquet-fallback = [
  "pandas>=1.5",
]

[project.scripts]
ctoken-train = "ctoken.cli:main"
