[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cit-tokenizers"
version = "0.3.0"
description = "CIT (Controlled Interface Tokenization) and parallel hygiene-aligned baselines (BPE/WordPiece/Unigram)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyarrow>=12",
  "pandas>=1.5",
  "datasets>=2.18",
  "huggingface_hub>=0.20",
  "transformers>=4.40",
  "tokenizers>=0.15",
  "hydra-core>=1.3",
]

[project.scripts]
cit-train-cit = "cit_tokenizers.cli.train_cit:main"
cit-train-bpeh = "cit_tokenizers.cli.train_bpe_hygiene:main"
cit-train-wordpieceh = "cit_tokenizers.cli.train_wordpiece_hygiene:main"
cit-train-unigramh = "cit_tokenizers.cli.train_unigram_hygiene:main"
cit-apply-contract = "cit_tokenizers.cli.apply_contract:main"

[tool.setuptools]
packages = ["cit_tokenizers"]
