[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cit-tokenizers"
version = "0.6.0"
description = "CIT (Controlled Interface Tokenization) and parallel hygiene-aligned baselines (BPE/WordPiece/Unigram)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyarrow>=12",
  "pandas>=1.5",
  "datasets>=2.18",
  "huggingface_hub>=0.20",
  "transformers>=4.40",
  "tokenizers>=0.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "mypy>=1.8",
]

# Optional helpers for `cit dataset pull`.
hf = [
  "datasets>=2.14",
  "pyarrow>=12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[project.scripts]
cit = "cit_tokenizers.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
include = ["cit_tokenizers*"]
